@startuml

class User {
  - id
  - nom
  - prenom
  - email
  - telephone
  - role
  - cin
}

class Department {
  - id
  - name
}

class InternshipApplication {
  - id
  - status
  - date_debut
  - date_fin
  - specialite
  - etablissement
}

class Intern {
  - id
  - qr_token
  - date_debut
  - date_fin
  - status
}

class Attendance {
  - id
  - date
  - check_in_at
  - check_out_at
}

class InternshipReport {
  - id
  - titre
  - status
}

class Evaluation {
  - id
  - note_finale
  - recommandation
}

class Convention {
  - id
  - numero
  - status
}

class Certificate {
  - id
  - numero
  - status
}

class AuditLog {
  - id
  - action
  - date
}

' User -> Department
User "1" --> "*" Department : appartient à
Department "1" --> "*" User : contient

' User -> InternshipApplication
User "1" --> "*" InternshipApplication : soumet

' InternshipApplication -> Intern
InternshipApplication "1" --> "0..1" Intern : donne lieu à

' User -> Intern (supervisor)
User "1" --> "*" Intern : encadre

' User -> Intern
User "1" --> "0..1" Intern : est

' Intern -> Attendance
Intern "1" --> "*" Attendance : enregistre

' Intern -> InternshipReport
Intern "1" --> "*" InternshipReport : rédige

' Intern -> Evaluation
Intern "1" --> "*" Evaluation : reçoit

' Intern -> Convention
Intern "1" --> "0..1" Convention : possède

' Intern -> Certificate
Intern "1" --> "0..1" Certificate : obtient

' User -> AuditLog
User "1" --> "*" AuditLog : génère

@enduml
